<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BigPicture</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_signup">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="button_submit">Submit</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="keep_logged_in">Keep me logged in</string>

</resources>
